# openslaq

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  bunfig.toml  docker-compose.yml  livekit.yaml  oxlint.json  package.json  tsconfig.base.json
apps/api/: Dockerfile  README.md  package.json
apps/api-e2e/: package.json  tsconfig.json
apps/api-e2e/tests/: admin.test.ts  all-unreads.test.ts  artificial-delay.test.ts  auth.test.ts  authorization.test.ts  bot-api.test.ts  bot-webhooks.test.ts  bots.test.ts  browse-channels.test.ts  channel-archive.test.ts  cors.test.ts  (+35 more)
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: .detoxrc.js  app.json  bun-resolve-utils.js  jest-bun-resolver.js  jest-resolver.js  jest.config.js  jest.setup.js  metro.config.js  package.json  tailwind.config.js  tsconfig.json
apps/web/: Caddyfile  Dockerfile  index.html  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
apps/web-e2e/: global-setup.ts  package.json  playwright.config.ts
docs/: README.md  backlog.md
docs/active/: backlog-desktop.md  backlog-engineering.md  backlog-mobile.md  backlog-product.md  backlog-slaq-parity.md
docs/archive/: backlog-2026-02.md  mobile-feature-gaps-2026-02.md  react-native-prep-2026-02.md  refactor-opportunities-2026-02.md  ui-backlog-2026-02.md
docs/dev-notes/: mobile.md
scripts/: count-tests.sh  deploy.sh  loc.sh  release-desktop.sh
(+424 files in other folders)
