[package]
name = "openslaq-desktop"
version = "0.0.1"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
lto = true
strip = true
codegen-units = 1
